--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".presentation.MoviesActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_superheroes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:listitem="@layout/view_item_movie"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
