--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.MoviesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_superheroes"
+        android:id="@+id/list_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
