--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,15 +2,16 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph">
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/movie">
 
     <fragment
         android:id="@+id/movie"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_movies">
-    <action
-        android:id="@+id/action_movie_to_detail"
-        app:destination="@+id/movie_detail"/>
+        <action
+            android:id="@+id/action_movie_to_detail"
+            app:destination="@+id/movie_detail"/>
     </fragment>
 
     <fragment
